--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -34,6 +34,8 @@ requirements:
     - elf =0.1.0
     - gasp
     - pytorch-3dunet
+    # plantseg server requirement
+    - flask
 
 test:
   imports:
