--- a/plantseg/resources/models_zoo.yaml
+++ b/plantseg/resources/models_zoo.yaml
@@ -5,53 +5,53 @@
 generic_confocal_3d_unet:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds2x&files=
   resolution: [0.235, 0.150, 0.150]
-  description: Unet trained on confocal images on 1/2-resolution in XY with BCEDiceLoss.
+  description: "Unet trained on confocal images on 1/2-resolution in XY with BCEDiceLoss."
 generic_light_sheet_3d_unet:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds1x&files=
   resolution: [0.25, 0.1625, 0.1625]
-  description: Unet trained on light-sheet images on original resolution with BCEDiceLoss.
+  description: "Unet trained on light-sheet images on original resolution with BCEDiceLoss."
 
 ## Ovules
 confocal_unet_bce_dice_ds1x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds1x&files=
   resolution: [0.235, 0.075, 0.075]
-  description: Unet trained on confocal images on original resolution with BCEDiceLoss.
+  description: "Unet trained on confocal images on original resolution with BCEDiceLoss."
 confocal_unet_bce_dice_ds2x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds2x&files=
   resolution: [0.235, 0.150, 0.150]
-  description: Unet trained on confocal images on 1/2-resolution in XY with BCEDiceLoss.
+  description: "Unet trained on confocal images on 1/2-resolution in XY with BCEDiceLoss."
 confocal_unet_bce_dice_ds3x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds3x&files=
   resolution: [0.235, 0.225, 0.225]
-  description: Unet trained on confocal images on 1/3-resolution in XY with BCEDiceLoss.
+  description: "Unet trained on confocal images on 1/3-resolution in XY with BCEDiceLoss."
 confocal_2D_unet_bce_dice_ds1x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds1x&files=
   resolution: [0.075, 0.075]
-  description: 2D Unet trained on z-slices of confocal images on original resolution with BCEDiceLoss.
+  description: "2D Unet trained on z-slices of confocal images on original resolution with BCEDiceLoss."
 confocal_2D_unet_bce_dice_ds2x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds2x&files=
   resolution: [0.150, 0.150]
-  description: 2D Unet trained on z-slices of confocal images (1/2-resolution in XY) with BCEDiceLoss.
+  description: "2D Unet trained on z-slices of confocal images (1/2-resolution in XY) with BCEDiceLoss."
 confocal_2D_unet_bce_dice_ds3x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds3x&files=
   resolution: [0.225, 0.225]
-  description: 2D Unet trained on z-slices of confocal images (1/3-resolution in XY) with BCEDiceLoss.
+  description: "2D Unet trained on z-slices of confocal images (1/3-resolution in XY) with BCEDiceLoss."
 
 
 ## Root
 lightsheet_unet_bce_dice_ds1x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds1x&files=
   resolution: [0.25, 0.1625, 0.1625]
-  description: Unet trained on light-sheet images on original resolution with BCEDiceLoss.
+  description: "Unet trained on light-sheet images on original resolution with BCEDiceLoss."
 lightsheet_unet_bce_dice_nuclei_ds1x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_nuclei_ds1x&files=
   resolution: [0.25, 0.1625, 0.1625]
-  description: Unet trained on light-sheet images of nuclei on original resolution with BCEDiceLoss. The network predicts 2 channels: nuclei mask in the 1st channel, nuclei boundaries in the 2nd channel
+  description: "Unet trained on light-sheet images of nuclei on original resolution with BCEDiceLoss. The network predicts 2 channels: nuclei mask in the 1st channel, nuclei boundaries in the 2nd channel"
 lightsheet_unet_bce_dice_ds2x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds2x&files=
   resolution: [0.25, 0.325, 0.325]
-  description: Unet trained on light-sheet images on 1/2-resolution in XY with BCEDiceLoss.
+  description: "Unet trained on light-sheet images on 1/2-resolution in XY with BCEDiceLoss."
 lightsheet_unet_bce_dice_ds3x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds3x&files=
   resolution: [0.25, 0.4875, 0.4875]
-  description: Unet trained on light-sheet images on 1/3-resolution in XY with BCEDiceLoss.
+  description: "Unet trained on light-sheet images on 1/3-resolution in XY with BCEDiceLoss."
