add crop to gui

--- a/plantseg/resources/config_gui_template.yaml
+++ b/plantseg/resources/config_gui_template.yaml
@@ -11,6 +11,10 @@ preprocessing:
   factor: [1.0, 1.0, 1.0]
   # the order of the spline interpolation
   order: 2
+  # cropping out areas of little interest can drastically improve the performance of plantseg.
+  # crop volume has to be input using the numpy slicing convention [b_z:e_z, b_x:e_x, b_y:e_y], where b_zxy is the
+  # first point of a bounding box and e_zxy is the second. eg: [:, 100:500, 400:900]
+  crop_volume: "[:, :, :]"
   # optional: perform Gaussian smoothing or median filtering on the input.
   filter:
     # enable/disable filtering
