--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -85,4 +85,6 @@ segmentation_postprocessing:
   factor: [1, 1, 1]
   # spline order for rescaling (keep 0 for segmentation post processing
   order: 0
+  # save raw input in the output segmentation file h5 file
+  save_raw: False
 
