--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -11,6 +11,10 @@ preprocessing:
   factor: [1.0, 1.0, 1.0]
   # the order of the spline interpolation
   order: 2
+  # cropping out areas of little interest can drastically improve the performance of plantseg.
+  # crop volume has to be input using the numpy slicing convention [b_z:e_z, b_x:e_x, b_y:e_y], where b_zxy is the
+  # first point of a bounding box and e_zxy is the second. eg: [:, 100:500, 400:900]
+  crop_volume: "[:,:,:]"
   # optional: perform Gaussian smoothing or median filtering on the input.
   filter:
     # enable/disable filtering
@@ -26,7 +30,7 @@ cnn_prediction:
   # Trained model name, more info on available models and custom models in the README
   model_name: "generic_confocal_3d_unet"
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
-  device: "cpu"
+  device: "cuda"
   # (int or tuple) mirror pad the input stack in each axis for best prediction performance
   mirror_padding: [16, 32, 32]
   # how many subprocesses to use for data loading
