Use CUDA device by default, show warning if not available

--- a/plantseg/resources/config_gui_template.yaml
+++ b/plantseg/resources/config_gui_template.yaml
@@ -30,7 +30,7 @@ cnn_prediction:
   # Trained model name, more info on available models and custom models in the README
   model_name: "generic_confocal_3d_unet"
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
-  device: "cpu"
+  device: "cuda"
   # patch size given to the network (adapt to fit in your GPU mem)
   patch: [32, 128, 128]
   # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
