--- a/plantseg/resources/raw2seg_template.yaml
+++ b/plantseg/resources/raw2seg_template.yaml
@@ -86,7 +86,7 @@ segmentation_postprocessing:
   # if True convert to result to tiff
   tiff: !check {tests: [is_binary], fallback: False}
   # rescaling factor
-  factor: !check {tests: [is_list, is_length3, iterative_is_int], fallback: [1.0, 1.0, 1.0]}
+  factor: !check {tests: [is_list, is_length3, iterative_is_float], fallback: [1.0, 1.0, 1.0]}
   # spline order for rescaling (keep 0 for segmentation post processing
   order: !check {tests: [is_int], fallback: 0}
   # save raw input in the output segmentation file h5 file
