--- a/plantseg/resources/config_gui_template.yaml
+++ b/plantseg/resources/config_gui_template.yaml
@@ -32,15 +32,17 @@ cnn_prediction:
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
   device: "cuda"
   # patch size given to the network (adapt to fit in your GPU mem)
-  patch: [32, 128, 128]
+  patch: [80, 160, 160]
   # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
-  stride: "Balanced"
+  stride: "Accurate (slowest)"
+  # padding to be removed from each axis in a given patch in order to avoid checkerboard artifacts
+  patch_halo: [8, 16, 16]
   # "best" refers to best performing on the val set (recommended), alternatively "last" refers to the last version before interruption
   version: best
   # If "True" forces downloading networks for the online repos
   model_update: False
   # (int or tuple) mirror pad the input stack in each axis for best prediction performance
-  mirror_padding: [ 16, 32, 32 ]
+  mirror_padding: [16, 32, 32]
   # how many subprocesses to use for data loading
   num_workers: 8
 
