--- a/bioimage-io/UNet2DArabidopsisOvules.model/UNet2DArabidopsisOvules.model.yaml
+++ b/bioimage-io/UNet2DArabidopsisOvules.model/UNet2DArabidopsisOvules.model.yaml
@@ -24,7 +24,7 @@ documentation: ./unet2d.md
 
 source: ./unet.py:UNet2D
 # additional model parameters
-optional_kwargs:
+optional:
   in_channels: 1
   out_channels: 1
   layer_order: gcr  # determines the order of operators in a single layer (crg - Conv3d+ReLU+GroupNorm)
