--- a/bioimage-io/UNet2DArabidopsisOvules.model/UNet2DArabidopsisOvules.model.yaml
+++ b/bioimage-io/UNet2DArabidopsisOvules.model/UNet2DArabidopsisOvules.model.yaml
@@ -6,8 +6,8 @@ timestamp: 2020-01-18T08:00:00
 description: "A 2D U-Net trained to predict the cell boundaries in confocal stacks of Arabidopsis ovules. Trained on z-slices of 3D confocal images."
 
 authors:
-  - Adrian Wolny;@wolny
-  - Lorenzo Cerrone;@lorenzocerrone
+  - name: Adrian Wolny;@wolny
+  - name: Lorenzo Cerrone;@lorenzocerrone
 
 cite:
   - text: "Cerrone, Wolny et al. Accurate and Versatile 3D Segmentation of Plant Tissues at Cellular Resolution. eLife 2020."
