--- a/bioimage-io/UNet3DLateralRootNuclei.model/UNet3DLateralRootNuclei.model.yaml
+++ b/bioimage-io/UNet3DLateralRootNuclei.model/UNet3DLateralRootNuclei.model.yaml
@@ -6,8 +6,8 @@ timestamp: 2020-01-18T08:00:00
 description: "A variant of 3D U-Net trained on light-sheet images of Arabidopsis lateral root nuclei on original resolution. Voxel size: (0.25x0.1625x0.1625 µm^3) (ZYX)."
 
 authors:
-  - Adrian Wolny;@wolny
-  - Lorenzo Cerrone;@lorenzocerrone
+  - name: Adrian Wolny;@wolny
+  - name: Lorenzo Cerrone;@lorenzocerrone
 
 cite:
   - text: "Cerrone, Wolny et al. Accurate and Versatile 3D Segmentation of Plant Tissues at Cellular Resolution. eLife 2020."
