--- a/bioimage-io/UNet3DLateralRoot.model/UNet3DLateralRoot.model.yaml
+++ b/bioimage-io/UNet3DLateralRoot.model/UNet3DLateralRoot.model.yaml
@@ -23,7 +23,7 @@ framework: pytorch
 
 documentation: ./unet3d.md
 
-source: ./unet.py:UNet3D
+source: unet.py::UNet3D
 # additional model parameters
 kwargs:
   in_channels: 1
