--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: plantseg
-  version: {{ GIT_DESCRIBE_TAG }}
+  version: environ.get('GIT_DESCRIBE_TAG', 'default')
 
 source:
   path: ..
