--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -21,12 +21,11 @@ jobs:
     - name: Build PlantSeg
       run: |
           conda install -q conda-build
-          conda build -c abailoni -c cpape -c awolny -c conda-forge --python=$TRAVIS_PYTHON_VERSION conda-recipe
+          conda build -c abailoni -c cpape -c awolny -c conda-forge conda-recipe
     - name: Install dependencies
       run: |
-        conda create -n plant-seg -c abailoni -c cpape -c awolny -c conda-forge --use-local plantseg
+        conda install -c abailoni -c cpape -c awolny -c conda-forge --use-local plantseg
     - name: Test with pytest
       run: |
-        conda activate plant-seg
         conda install pytest
         pytest
