--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: plantseg
-  version: {{ environ.get('GIT_DESCRIBE_TAG', 'default') }}
+  version: {{ environ.get('GITHUB_REF', 'default') }}
 
 source:
   path: ..
