--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Test
       run: |
         echo $RELEASE_VERSION
-        echo $
+        echo ${{ env.RELEASE_VERSION }}
     - name: Check Version
       run: echo "$GITHUB_REF $GITHUB_SHA"
     - name: Set up Python 3.8
