--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -16,8 +16,10 @@ jobs:
       run: |
         echo $RELEASE_VERSION
         echo ${{ env.RELEASE_VERSION }}
-    - name: Check Version
-      run: echo "$GITHUB_REF $GITHUB_SHA"
+    - name: Test if tagged
+      if: startsWith( github.ref, 'refs/tags/releases/')
+      run: |
+        echo "Ok"
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
