--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -18,7 +18,7 @@ jobs:
         echo $GITHUB_REF
         echo ${{ env.RELEASE_VERSION }}
     - name: Test if tagged
-      if: startsWith( github.ref, 'refs/tags/releases/')
+      if: startsWith( github.ref, 'refs/tags/')
       run: |
         echo "Ok"
     - name: Set up Python 3.8
