--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -12,15 +12,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set env
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - name: Test
+    - name: Print version name
       run: |
+        echo $HOME
+        echo $CONDA
         echo $RELEASE_VERSION
-        echo $GITHUB_REF
-        echo ${{ env.RELEASE_VERSION }}
-    - name: Test if tagged
-      if: startsWith( github.ref, 'refs/tags/')
-      run: |
-        echo "Ok"
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
@@ -36,7 +32,15 @@ jobs:
     - name: Install dependencies
       run: |
         conda install -c abailoni -c cpape -c awolny -c conda-forge --use-local plantseg
-    - name: Test with pytest
+    - name: Test
       run: |
         conda install pytest
         pytest
+
+    - name: Deploy on conda
+      needs: Test
+      if: startsWith( github.ref, 'refs/tags/')
+      env:
+        ANACONDA_SECRET: ${{ secrets.ANACONDA_TOKEN }}
+      run: |
+        anaconda -t $ANACONDA_SECRET upload $HOME/miniconda/conda-bld/**/plantseg-*.tar.bz2
