--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -14,8 +14,6 @@ jobs:
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Print version name
       run: |
-        echo $HOME
-        echo $CONDA
         echo $RELEASE_VERSION
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
@@ -36,10 +34,9 @@ jobs:
       run: |
         conda install pytest
         pytest
-
     - name: Deploy on conda
-      if: startsWith( github.ref, 'refs/tags/')
+      if: ${{ success() }} && startsWith( github.ref, 'refs/tags/')
       env:
         ANACONDA_SECRET: ${{ secrets.ANACONDA_TOKEN }}
       run: |
-        anaconda -t $ANACONDA_SECRET upload $HOME/miniconda/conda-bld/**/plantseg-*.tar.bz2
+        anaconda -t $ANACONDA_SECRET upload $CONDA/conda-bld/**/plantseg-*.tar.bz2
