--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -12,9 +12,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set PlantSeg version name
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - name: Deploy on conda test
+      if: ${{ success() }} && startsWith( github.ref, 'refs/tags/')
+      run: echo "ok"
+
     - name: Print PlantSeg version name
       run: |
         echo $RELEASE_VERSION
+        echo ${{ secrets.ANACONDA_TOKEN }}
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
