--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Set PlantSeg version name
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Deploy on conda test
-      if: ${{ success() }} && startsWith( github.ref, 'refs/tags/')
+      if: ${{ startsWith( github.ref, 'refs/tags/') && success() }}
       run: echo "ok "
 
     - name: Print PlantSeg version name
