--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -27,7 +27,7 @@ jobs:
           conda build -c conda-forge -c awolny conda-recipe
     - name: Install dependencies
       run: |
-        conda install -c conda-forge -c awolny --use-local plantseg
+        conda install -c conda-forge -c awolny --use-local pytorch-3dunet=1.3.7 plantseg
     - name: Run pytest
       run: |
         conda install pytest
