fix errors in test

--- a/tests/resources/test_config.yaml
+++ b/tests/resources/test_config.yaml
@@ -40,7 +40,7 @@ cnn_prediction:
   # patch size given to the network (adapt to fit in your GPU mem)
   patch: [32, 128, 128]
   # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
-  stride: "Balanced"
+  stride: "Accurate (slowest)"
   # "best" refers to best performing on the val set (recommended), alternatively "last" refers to the last version before interruption
   version: best
   # If "True" forces downloading networks from the online repos
