--- a/plantseg/resources/models_zoo.yaml
+++ b/plantseg/resources/models_zoo.yaml
@@ -26,15 +26,15 @@ confocal_unet_bce_dice_ds3x:
   description: "Unet trained on confocal images on 1/3-resolution in XY with BCEDiceLoss."
 confocal_2D_unet_bce_dice_ds1x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds1x&files=
-  resolution: [0.075, 0.075]
+  resolution: [1., 0.075, 0.075]
   description: "2D Unet trained on z-slices of confocal images on original resolution with BCEDiceLoss."
 confocal_2D_unet_bce_dice_ds2x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds2x&files=
-  resolution: [0.150, 0.150]
+  resolution: [1., 0.150, 0.150]
   description: "2D Unet trained on z-slices of confocal images (1/2-resolution in XY) with BCEDiceLoss."
 confocal_2D_unet_bce_dice_ds3x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds3x&files=
-  resolution: [0.225, 0.225]
+  resolution: [1., 0.225, 0.225]
   description: "2D Unet trained on z-slices of confocal images (1/3-resolution in XY) with BCEDiceLoss."
 confocal_unet_bce_dice_nuclei_stain_ds1x:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_nuclei_stain_ds1x&files=
@@ -62,7 +62,7 @@ lightsheet_unet_bce_dice_ds3x:
 # PNAS
 confocal_PNAS_2d:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FPNAS%2Fconfocal_PNAS_2d&files=
-  resolution: [0.25, 0.25, 0.25]
+  resolution: [1., 0.25, 0.25]
   description: "2D Unet trained on z-slices of confocal images of Arabidopsis thaliana apical stem cell: https://www.repository.cam.ac.uk/handle/1810/262530"
 confocal_PNAS_3d:
   path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FPNAS%2Fconfocal_PNAS_3d&files=
