--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -19,7 +19,7 @@ requirements:
     - pip
 
   run:
-    - python => 3.9
+    - python =3.9
     - h5py
     - requests
     - pyyaml
@@ -28,7 +28,7 @@ requirements:
     - vigra
     - pytorch
     - python-elf
-    - pytorch-3dunet => 1.3.7
+    - pytorch-3dunet =>1.3.7
 
 test:
   imports:
