--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -29,6 +29,8 @@ requirements:
     - pytorch
     - python-elf
     - pytorch-3dunet =>1.3.7
+    - napari
+    - python-graphviz
 
 test:
   imports:
