--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -29,13 +29,13 @@ requirements:
     - pytorch
     - python-elf
     - pytorch-3dunet =>1.3.7
-    - napari
+    - viewer
     - python-graphviz
 
 test:
   imports:
     - plantseg
-    - plantseg.gui
+    - plantseg.legacy_gui
     - plantseg.segmentation
   requires:
     - pytest
