--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Build PlantSeg using Boa
       shell: bash -l {0}
       run: |
+          conda install -c conda-forge mamba
           mamba install -q boa
           mamba mambabuild -c conda-forge -c awolny conda-recipe
     - name: Create PlantSeg env
