--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - vigra
     - pytorch
     - python-elf
-    - pytorch-3dunet
+    - pytorch-3dunet=1.3.9
     - napari
     - python-graphviz
 
