--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Build PlantSeg using Boa
       shell: bash -l {0}
       run: |
-          conda config --set allow_conda_downgrades true
-          conda install conda=4.12.0 -y
+          # conda config --set allow_conda_downgrades true
+          # conda install conda=4.12.0 -y
           conda install --yes -c conda-forge mamba
           mamba install -q boa
           mamba mambabuild -c conda-forge -c awolny conda-recipe
