--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -30,10 +30,10 @@ jobs:
           # conda install conda=4.12.0 -y
           conda install --yes -c conda-forge mamba
           mamba install -q boa
-          mamba mambabuild -c conda-forge -c awolny conda-recipe
+          mamba mambabuild -c conda-forge conda-recipe
     - name: Create PlantSeg env
       run: |
-          mamba create -n plant-seg -c local -c conda-forge -c awolny plantseg pytest
+          mamba create -n plant-seg -c local -c conda-forge plantseg pytest
     - name: Run pytest
       shell: bash -l {0}
       run: |
