--- a/plantseg/resources/config_gui_template.yaml
+++ b/plantseg/resources/config_gui_template.yaml
@@ -28,21 +28,17 @@ cnn_prediction:
   # enable/disable UNet prediction
   state: True
   # Trained model name, more info on available models and custom models in the README
-  model_name: "generic_confocal_3d_unet"
+  model_name: "generic_confocal_3D_unet"
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
   device: "cuda"
   # patch size given to the network (adapt to fit in your GPU mem)
   patch: [80, 160, 160]
-  # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
-  stride: "Accurate (slowest)"
-  # padding to be removed from each axis in a given patch in order to avoid checkerboard artifacts
-  patch_halo: [8, 16, 16]
-  # "best" refers to best performing on the val set (recommended), alternatively "last" refers to the last version before interruption
-  version: best
+  # stride between patches will be `patch * stride_ratio` (make sure the patches overlap in order to get smoother prediction maps)
+  stride_ratio: 0.75
+  # padding to be added to each axis in a given patch in order to avoid checkerboard artifacts
+  patch_halo: [2, 4, 4]
   # If "True" forces downloading networks for the online repos
   model_update: False
-  # (int or tuple) mirror pad the input stack in each axis for best prediction performance
-  mirror_padding: [16, 32, 32]
   # how many subprocesses to use for data loading
   num_workers: 8
 
