--- a/plantseg/resources/config_predict_template.yaml
+++ b/plantseg/resources/config_predict_template.yaml
@@ -1,4 +1,3 @@
-
 # model configuration
 model:
   # model class
@@ -15,11 +14,10 @@ model:
   num_groups:
   # apply element-wise nn.Sigmoid after the final 1x1 convolution, otherwise apply nn.Softmax
   final_sigmoid:
-
 # predictor configuration
 predictor:
   # standard in memory predictor
-  name: 'StandardPredictor'
+  name: 'ArrayPredictor'
   # padding to be added to each axis in a given patch
   patch_halo: [2, 4, 4]
 # specify the test datasets
@@ -35,9 +33,9 @@ loaders:
       # SliceBuilder class
       name: SliceBuilder
       # train patch size given to the network (adapt to fit in your GPU mem, generally the bigger patch the better)
-      patch_shape: [100, 224, 224]
+      patch_shape: [100, 160, 160]
       # train stride between patches
-      stride_shape: [40, 100, 100]
+      stride_shape: [75, 120, 120]
 
     transformer:
       raw:
