--- a/plantseg/resources/raw2seg_template.yaml
+++ b/plantseg/resources/raw2seg_template.yaml
@@ -31,18 +31,14 @@ cnn_prediction:
   model_name: !check {tests: [is_string, model_exist], fallback:}
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
   device: !check {tests: [check_cuda], fallback: "cpu"}
-  # (int or tuple) mirror pad the input stack in each axis for best prediction performance
-  mirror_padding: !check {tests: [is_list, is_length3, iterative_is_int], fallback: [16, 32, 32]}
   # (int or tuple) padding to be removed from each axis in a given patch in order to avoid checkerboard artifacts
-  patch_halo: !check {tests: [is_list, is_length3, iterative_is_int], fallback: [8, 16, 16]}
+  patch_halo: !check {tests: [is_list, is_length3, iterative_is_int], fallback: [2, 4, 4]}
   # how many subprocesses to use for data loading
   num_workers: !check {tests: [is_int], fallback: 8}
   # patch size given to the network (adapt to fit in your GPU mem)
   patch: !check {tests: [is_list, is_length3, iterative_is_int], fallback: [32, 128, 128]}
-  # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
-  stride: !check {tests: [is_stride], fallback: [20, 100, 100]}
-  # "best" refers to best performing on the val set (recommended), alternatively "last" refers to the last version before interruption
-  version: !check {tests: [is_string], fallback: "best"}
+  # stride of the sliding window, computed as patch_size * stride_ratio
+  stride_ratio: !check {tests: [is_float], fallback: 0.75}
   # If "True" forces downloading networks from the online repos
   model_update: !check {tests: [is_binary], fallback: False}
 
