--- a/tests/resources/test_config.yaml
+++ b/tests/resources/test_config.yaml
@@ -31,18 +31,14 @@ cnn_prediction:
   model_name: "generic_confocal_3D_unet"
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
   device: "cpu"
-  # If True raw data will be mirror padded with 20 voxels in each axis
-  mirror_padding: [16, 32, 32]
-  # halo to be removed from each patch
-  patch_halo: [8, 16, 16]
+  # halo to be added to each patch
+  patch_halo: [2, 4, 4]
   # how many subprocesses to use for data loading
   num_workers: 1
   # patch size given to the network (adapt to fit in your GPU mem)
   patch: [32, 128, 128]
-  # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
-  stride: "Accurate (slowest)"
-  # "best" refers to best performing on the val set (recommended), alternatively "last" refers to the last version before interruption
-  version: best
+  # stride between patches will be `patch * stride_ratio` (make sure the patches overlap in order to get smoother prediction maps)
+  stride_ratio: 0.75
   # If "True" forces downloading networks from the online repos
   model_update: True
 
